Added Line 1 in body

--- a/newhtml.html
+++ b/newhtml.html
@@ -1,9 +1,13 @@
 <html>
 
-<head> Heading of HTML
+<head> 
+Heading of HTML
 </head>
 
 <body>
+
+<h1> This is line 1</h1>   <!-- Made change in local repo-->
+
 </body>
 
 </html>
