Style tag added in Head from remote

--- a/newhtml.html
+++ b/newhtml.html
@@ -1,6 +1,10 @@
 <html>
 
-<head> Heading of HTML
+<head> 
+  <style>
+    H1 {color:red; font-size:200%}
+    P  {color:blue; font-size:150%}
+  </style>                     <!-- style tag added from remote repo -->
 </head>
 
 <body>
