removed changes of adding Line 1

--- a/newhtml.html
+++ b/newhtml.html
@@ -1,15 +1,12 @@
 <html>
 
 <head> 
-<style>
- H1 {color:red; font-size:200%}
- P  {color:blue; font-size:150%}
-</style>
+Heading of HTML
 </head>
 
 <body>
 
-<h1> </h1>   <!-- Made change in local repo-->
+<h1></h1>   <!-- Made change in local repo-->
 
 </body>
 
