idk what happened but treating it back to that state. Added Line1 from local

--- a/newhtml.html
+++ b/newhtml.html
@@ -6,7 +6,7 @@ Heading of HTML
 
 <body>
 
-<h1></h1>   <!-- Made change in local repo-->
+<h1>Adding Line 1</h1>   <!-- Made change in local repo-->
 
 </body>
 
